同步方式创建ZK节点示例

--- a/zkclinet-example/src/main/resources/log4j.properties
+++ b/zkclinet-example/src/main/resources/log4j.properties
@@ -25,5 +25,5 @@ log4j.appender.D.layout=org.apache.log4j.PatternLayout
 log4j.logger.java.sql.Connection=OFF
 log4j.logger.com.ibatis.common.jdbc.ScriptRunner=OFF
 log4j.appender.E.Threshold=OFF
-log4j.rootLogger=WARN,stdout
+log4j.rootLogger=INFO,stdout
 log4j.appender.E.File=error/error.log
