Curator操作Zookeeper实现配置统一管理示例

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>core-api-example</module>
         <module>curator-example</module>
+        <module>configuration-management-example</module>
     </modules>
 
     <properties>
